<resources>
    <string name="app_name">MLM</string>
    <string name="hint_password">Password</string>
    <string name="hint_reference_id">Reference ID</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_adhar_card_number">Adhar Card Number</string>
    <string name="lbl_email_id">Email Id</string>
    <string name="lbl_reference_id">Reference Id</string>
    <string name="empty_reference_id">Reference ID can not be empty</string>
    <string name="empty_password">Password can not be empty</string>
    <string name="empty_confirm_password">Confirm password can not be empty</string>
    <string name="warning_password_mismatch">Password and Confirm password must match</string>
    <string name="warning_new_password_mismatch">New password and Confirm password must match</string>
    <string name="empty_first_name">First name can not be empty</string>
    <string name="empty_last_name">Last name can not be empty</string>
    <string name="empty_mobile_number">Mobile number can not be empty</string>
    <string name="empty_adhar_card_number">Adhar card number can not be empty</string>
    <string name="empty_email">E-mail can not be empty</string>
    <string name="base_url">http://stemwordcloud.esy.es/mlm/</string>
    <string name="msg_login_successful">You have logged in successfully</string>
    <string name="msg_registration_successful">You have registered successfully</string>
    <string name="invalide_user_credentials">Please enter valid login credentials</string>
    <string name="warning_something_went_wrong">Something went wrong. Please try again later</string>
    <string name="btm_nav_title_home">Home</string>
    <string name="btm_nav_title_settings">Settings</string>
    <string name="btm_nav_title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_logout">logout</string>
    <string name="lbl_delete_ac">Delete Account</string>
    <string name="delete_account_alert">Are you sure you want to delete your account?</string>
    <string name="empty_current_password">Current password can not be empty</string>
    <string name="empty_new_password">New password can not be empty</string>
    <string name="change_password_successful_msg">Your password has been changed successfully</string>
    <string name="warning_not_registered">You have not registered successfully</string>
</resources>
