<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.preyansh.mlm.dashboard.profile.ProfileViewModel" />

        <variable
            name="profile"
            type="com.support.builders.ApiBuilder.responseModels.UserProfileResponseModel.DataItem" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="false"
        android:padding="16dp"
        tools:context=".dashboard.profile.ProfileFragment">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_full_name"
            style="@style/SingleLineTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_full_name"
                style="@style/SingleLineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/hint_full_name"
                android:inputType="textPersonName"
                android:text="@{vm.fullname}"
                tools:text="" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email_profile"
            style="@style/SingleLineTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_full_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_email_profile"
                style="@style/SingleLineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/lbl_email_id"
                android:inputType="textEmailAddress"
                android:text="@{profile.email}"
                tools:text="" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_number_profile"
            style="@style/SingleLineTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_email_profile">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_number_profile"
                style="@style/SingleLineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/lbl_mobile_number"
                android:inputType="phone"
                android:text="@{profile.number}"
                tools:text="" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_adhar_carrd_profile"
            style="@style/SingleLineTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_number_profile">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_adhar_carrd_profile"
                style="@style/SingleLineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/lbl_adhar_card_number"
                android:inputType="number"
                tools:text="" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_reference_id_profile"
            style="@style/SingleLineTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_adhar_carrd_profile">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_reference_id_profile"
                style="@style/SingleLineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/lbl_reference_id"
                android:inputType="number"
                android:text="@{profile.refid}"
                tools:text="" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_primary"
            android:text="@string/lbl_submit"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_reference_id_profile" />

    </android.support.constraint.ConstraintLayout>
</layout>
