<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.preyansh.mlm.login.LoginViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:padding="8dp"
        tools:context=".login.LoginActivity">

        <Button
            android:id="@+id/btn_register_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_accent"
            android:text="@string/lbl_register"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_primary"
            android:text="@string/lbl_sign_in"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="OR"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_sign_in" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/btn_sign_in" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password_login"
            style="@style/SingleLineTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_reference_id_login"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_password_login"
                style="@style/SingleLineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                tools:text="jshasdf" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_reference_id_login"
            style="@style/SingleLineTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_reference_id_login"
                style="@style/SingleLineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/hint_reference_id"
                tools:text="jhadgsfahjdgfjhadgsfahjdgfjhadgsfahjdgf" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password_login" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

    </android.support.constraint.ConstraintLayout>
</layout>
